Use the codecified nbt serializing methods